--- a/themes/Sakura/layout/_partial/headertop.ejs
+++ b/themes/Sakura/layout/_partial/headertop.ejs
@@ -12,7 +12,7 @@
         <p><%= theme.description %></p>
         <div class="top-social_v2">
           <li id="bg-pre">
-            <img class="flipx" src="https://cdn.jsdelivr.net/gh/starlovei/cdn/img/other/next-b.svg">
+            <img class="flipx" src="https://cdn.jsdelivr.net/gh/starlovei/cdn/img/other/next.png">
           </li>
           <% if (theme.social) {%>
             <% for (i in theme.social) {%>
